--- a/WebApp/Views/_ViewImports.cshtml
+++ b/WebApp/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using WebApp
 @using WebApp.Models
+@using Infrastructure.Context;
+@using Domain.Models.Aggregate;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
