--- a/WebApp/Views/_ViewImports.cshtml
+++ b/WebApp/Views/_ViewImports.cshtml
@@ -1,5 +1,4 @@
 ﻿@using WebApp
 @using WebApp.Models
-@using Infrastructure.Context;
-@using Domain.Models.Aggregate;
+@using WebApp.Models.ViewModel;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
