--- a/WebApp/Views/Course/List.cshtml
+++ b/WebApp/Views/Course/List.cshtml
@@ -1,13 +1,14 @@
-﻿@model IReadOnlyCollection<Course>
+﻿@model IReadOnlyCollection<CourseViewModel>
 
 @foreach (var course in Model)
 {
     //jako tabela
     <h1>@course.Name</h1>
     <p>@course.Description</p>
-    <p>@course.Deprecated</p>
+    <p>@course.IsActive</p>
     if (User.IsInRole("Student"))
     {
-        <a asp-controller="Course" asp-action="Enroll" asp-route-courseId="@course.CourseId">Enroll</a>
+        //check if user already enrolled
+        <a asp-controller="CourseEnrollment" asp-action="Enroll" asp-route-courseId="@course.CourseId">Enroll</a>
     }
 }
