--- a/WebApp/Views/Shared/_Layout.cshtml
+++ b/WebApp/Views/Shared/_Layout.cshtml
@@ -29,6 +29,9 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Student" asp-action="List">Students</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Course" asp-action="ListAdmin">Courses{Admin}</a>
+                            </li>
                             @* }else *@
                             @* { *@
                             <li class="nav-item">
@@ -36,7 +39,7 @@
                             </li>
                             @* } *@
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Course" asp-action="List">Courses</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Course" asp-action="List">Courses{student}</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Logout">Logout</a>
