--- a/WebApp/Views/Shared/_Layout.cshtml
+++ b/WebApp/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
                             @* @if (User != null && User.IsInRole("Admin")) *@
                             @* { *@
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Register">AddStudent</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Student" asp-action="Register">RegisterStudent</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Student" asp-action="List">Students</a>
