--- a/WebApp/Views/_ViewImports.cshtml
+++ b/WebApp/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using WebApp
 @using WebApp.Models
 @using WebApp.Models.ViewModel;
+@using WebApp.Models.InputModel;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
