--- a/WebApp/Views/Student/MarksFromCourse.cshtml
+++ b/WebApp/Views/Student/MarksFromCourse.cshtml
@@ -2,7 +2,7 @@
 
 @foreach (var markedModule in Model.CourseModuleMarks)
 {
-    <h1>courseModule ID: @markedModule.CourseModuleId</h1>
+    <h1>courseModule: @markedModule.CourseDescription</h1>
 
     @if (markedModule.Mark != null)
     {
