added passwordChange for students

--- a/WebApp/Views/Student/Profile.cshtml
+++ b/WebApp/Views/Student/Profile.cshtml
@@ -5,3 +5,4 @@
 <h1>@Model.BirthDate </h1>
 <h1>@Model.Email </h1>
 <a asp-controller="CourseEnrollment" asp-action="List">Your Courses</a>
+<a asp-controller="Account" asp-action="ChangePassword">Change Password</a>
