refactoring of controllers and middleware changed to attributefilter

--- a/WebApp/Views/Account/RegisterStudent.cshtml
+++ b/WebApp/Views/Account/RegisterStudent.cshtml
@@ -2,7 +2,7 @@
 
 <div class="row">
     <div class="col-md-4">
-        <form asp-controller="Student" asp-action="Register" method="post">
+        <form asp-controller="Account" asp-action="RegisterStudent" method="post">
             <h2>Create a new account for student</h2>
             <hr />
             <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
