--- a/WebApp/Views/Shared/_Layout.cshtml
+++ b/WebApp/Views/Shared/_Layout.cshtml
@@ -19,7 +19,7 @@
                             @if (User != null && User.IsInRole("Admin"))
                             {
                                 <li class="nav-item">
-                                    <a class="nav-link text-dark" asp-controller="Student" asp-action="Register">RegisterStudent</a>
+                                    <a class="nav-link text-dark" asp-controller="Account" asp-action="RegisterStudent">RegisterStudent</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link text-dark" asp-controller="Student" asp-action="List">Students</a>
