--- a/WebApp/Views/Course/AllCoursesStudent.cshtml
+++ b/WebApp/Views/Course/AllCoursesStudent.cshtml
@@ -3,6 +3,8 @@
 @foreach (var course in Model)
 {
     //jako tabela
+    <h1>@course.Name</h1>
+    <p>@course.Description</p>
     @await Html.PartialAsync("_StatusPartial", course)
 
     @if (User.IsInRole("Student"))
