--- a/WebApp/Views/Student/AllStudents.cshtml
+++ b/WebApp/Views/Student/AllStudents.cshtml
@@ -1,11 +1,25 @@
 ﻿@model IReadOnlyCollection<StudentInfoViewModel>
 
-@foreach (var student in Model)
-{
-    <section>
-        <header>student no. @student.StudentId</header>
-        <p>@student.FirstName</p>
-        <p>@student.LastName</p>
-        <a asp-controller="CourseEnrollment" asp-action="List" asp-route-studentId="@student.StudentId">enrolled courses</a>
-    </section>
-}
+<table class="table">
+    <thead>
+        <tr>
+            <th scope="col"> Student ID</th>
+            <th scope="col"> First Name</th>
+            <th scope="col"> Last Name</th>
+            <th scope="col"> Enrolled Courses</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var student in Model)
+        {
+            <tr>
+                <td>student no. @student.StudentId</td>
+                <td>@student.FirstName</td>
+                <td>@student.LastName</td>
+                <td>
+                    <a asp-controller="CourseEnrollment" asp-action="List" asp-route-studentId="@student.StudentId" class="btn btn-primary">enrolled courses</a>
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
