--- a/WebApp/Views/Student/Profile.cshtml
+++ b/WebApp/Views/Student/Profile.cshtml
@@ -1,8 +1,32 @@
 ﻿@model ProfileViewModel
 
-<h1>@Model.FirstName </h1>
-<h1>@Model.LastName </h1>
-<h1>@Model.BirthDate </h1>
-<h1>@Model.Email </h1>
-<a asp-controller="CourseEnrollment" asp-action="List">Your Courses</a>
-<a asp-controller="Account" asp-action="ChangePassword">Change Password</a>
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <div class="card shadow-sm">
+                <div class="card-header bg-primary text-white">
+                    <h3>Student Profile</h3>
+                </div>
+                <div class="card-body">
+                    <dl class="row">
+                        <dt class="col-sm-4">First Name:</dt>
+                        <dd class="col-sm-8">@Model.FirstName</dd>
+
+                        <dt class="col-sm-4">Last Name:</dt>
+                        <dd class="col-sm-8">@Model.LastName</dd>
+
+                        <dt class="col-sm-4">Email:</dt>
+                        <dd class="col-sm-8">@Model.Email</dd>
+
+                        <dt class="col-sm-4">Birth Date:</dt>
+                        <dd class="col-sm-8">@Model.BirthDate</dd>
+                    </dl>
+                </div>
+                <div class="card-footer text-center">
+                    <a asp-controller="CourseEnrollment" asp-action="List" class="btn btn-primary">Your Courses</a>
+                    <a asp-controller="Account" asp-action="ChangePassword" class="btn btn-primary">Change Password</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
