--- a/WebApp/Views/Account/ChangePassword.cshtml
+++ b/WebApp/Views/Account/ChangePassword.cshtml
@@ -14,7 +14,7 @@
                         Update your password.
                     </p>
                     <hr />
-                    <form method="post" asp-action="ChangePassword" asp-controller="Account">
+                    <form method="post" asp-action="changePassword" asp-controller="Account">
                         <div asp-validation-summary="All" class="text-danger"></div>
                         <div class="form-group mb-3">
                             <label asp-for="CurrentPassword" class="form-label">Current Password</label>
